force-app/main/default/objects/News__c/News__c.object-meta.xml
<CustomObject>
    <label>News</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>