force-app/main/default/objects/News__c/fields/DescriptionEn__c.field-meta.xml
<CustomField>
    <fullName>DescriptionEn__c</fullName>
    <label>DescriptionEn</label>
    <type>TextArea</type>
</CustomField>