force-app/main/default/objects/News__c/fields/DescriptionFr__c.field-meta.xml
<CustomField>
    <fullName>DescriptionFr__c</fullName>
    <label>DescriptionFr</label>
    <type>TextArea</type>
</CustomField>