force-app/main/default/objects/News__c/fields/DescriptionIt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionIt__c</fullName>
    <label>DescriptionIt</label>
    <type>TextArea</type>
</CustomField>