force-app/main/default/objects/News__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <type>TextArea</type>
</CustomField>