force-app/main/default/objects/News__c/fields/TitleEn__c.field-meta.xml
<CustomField>
    <fullName>TitleEn__c</fullName>
    <label>TitleEn</label>
    <length>100</length>
    <type>Text</type>
</CustomField>