force-app/main/default/objects/News__c/fields/TitleFr__c.field-meta.xml
<CustomField>
    <fullName>TitleFr__c</fullName>
    <label>TitleFr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>