force-app/main/default/objects/News__c/fields/TitleIt__c.field-meta.xml
<CustomField>
    <fullName>TitleIt__c</fullName>
    <label>TitleIt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>